--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "model": "readonly",
     "_": "readonly"
   },
+  "plugins": ["lodash"],
   "rules": {
     "lodash/preferred-alias": [2, { "ignoreMethods": ["extend", "any"] }],
     "lodash/prefer-lodash-method": 0
