--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
   },
   "plugins": ["lodash"],
   "rules": {
-    "lodash/prefer-lodash-method": 0
+    "lodash/prefer-lodash-method": 0,
+    "no-inner-declarations": 0
   }
 }
