Remove unused or invalid global variables

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,11 +11,8 @@
   },
   "extends": ["eslint:recommended", "plugin:lodash/v3", "prettier"],
   "globals": {
-    "api": "readonly",
     "model": "readonly",
-    "_": "readonly",
-    "loc": "readonly",
-    "ai_types": "readonly"
+    "_": "readonly"
   },
   "plugins": ["lodash"],
   "rules": {
