--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,7 @@
   "plugins": ["lodash"],
   "rules": {
     "lodash/prefer-lodash-method": 0,
-    "no-inner-declarations": 0
+    "no-inner-declarations": 0,
+    "curly": [2, "all"]
   }
 }
